--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^6.2.6",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
+    "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
